--- a/WEB/package.json
+++ b/WEB/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "groq-sdk": "^0.8.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
+    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "recharts": "^2.14.1",
-    "lucide-react": "^0.468.0",
-    "groq-sdk": "^0.8.0"
+    "recharts": "^2.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
